--- a/.config/python/.isort.cfg
+++ b/.config/python/.isort.cfg
@@ -1,4 +1,4 @@
 [settings]
 known_standard_library=os,sys,json,math,time
-known_third_party=numpy,ubelt,pandas
+known_third_party=numpy,ubelt,pandas,matplotlib
 sections=FUTURE,STDLIB,THIRDPARTY,LOCALFOLDER
